# suzune

./: .gitignore  LICENSE  README.md  THIRD_PARTY_NOTICES.md  implementation_plan.md  index.html  package.json  progress.md  tasks.json
.github/workflows/: pages.yml
docs/: findings.md  legal-review.md  linkedin-post.md  naming-decision.md  research-architecture.md  research-complaints.md  research-local-asr.md  research-music-robustness.md  spike-results.md
docs/demo/: demo-anim.html
landing/: index.html
spikes/s1-asr-bench/: Cargo.toml
spikes/s1-asr-bench/src/: main.rs
spikes/s3-cleanup-bench/: bench.py  bench_v31.py  samples.jsonl
src/: App.css  MainWindow.tsx  Overlay.tsx  SettingsPage.tsx  SetupPage.tsx  main.tsx
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/crates/asr/: Cargo.toml
src-tauri/crates/asr/src/: engine.rs  lib.rs  paths.rs
src-tauri/crates/asr/tests/: parakeet_transcribe.rs
src-tauri/crates/audio/: Cargo.toml
src-tauri/crates/audio/examples/: live_mic.rs
src-tauri/crates/audio/src/: lib.rs  resampler.rs
src-tauri/crates/cleanup/: Cargo.toml
src-tauri/crates/cleanup/examples/: mode_bench.rs
src-tauri/crates/cleanup/src/: client.rs  lib.rs  prompt.rs  server.rs
src-tauri/crates/cleanup/tests/: live_server.rs
src-tauri/crates/inject/: Cargo.toml
src-tauri/crates/inject/examples/: inject_demo.rs
src-tauri/crates/inject/src/: clipboard.rs  direct_type.rs  error.rs  lib.rs  macos.rs
src-tauri/crates/pipeline-cli/: Cargo.toml
src-tauri/crates/pipeline-cli/src/: main.rs
src-tauri/crates/vad/: Cargo.toml
src-tauri/crates/vad/src/: endpointer.rs  lib.rs  vad.rs
src-tauri/icons/: icon.icns
src-tauri/src/: coordinator.rs  lib.rs  main.rs  models.rs  personalization.rs  settings.rs
