[workspace]
members = ["crates/audio", "crates/vad", "crates/asr", "crates/pipeline-cli", "crates/cleanup", "crates/inject"]

[workspace.dependencies]
anyhow = "1.0"
log = "0.4"

[package]
name = "whispr"
version = "0.1.0"
description = "Local-first voice dictation. Nothing leaves your machine."
authors = ["whispr contributors"]
edition = "2021"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "whispr_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
whispr-audio = { path = "crates/audio" }
whispr-vad = { path = "crates/vad" }
whispr-asr = { path = "crates/asr" }
