[workspace]
members = ["crates/audio", "crates/vad", "crates/asr", "crates/pipeline-cli", "crates/cleanup", "crates/inject"]

[workspace.dependencies]
anyhow = "1.0"
log = "0.4"

[package]
name = "suzune"
version = "0.1.0"
description = "Local-first voice dictation. Nothing leaves your machine."
authors = ["suzune contributors"]
edition = "2021"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "suzune_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api", "devtools"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
suzune-audio = { path = "crates/audio" }
suzune-vad = { path = "crates/vad" }
suzune-asr = { path = "crates/asr" }
suzune-cleanup = { path = "crates/cleanup" }
suzune-inject = { path = "crates/inject" }
tauri-plugin-global-shortcut = "2"
anyhow.workspace = true
env_logger = "0.11.11"
log.workspace = true
ureq = "2"
flate2 = "1.1.9"
tar = "0.4.46"
