[package]
name = "whispr-inject"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
log = { workspace = true }
enigo = "0.6"
arboard = "3.6"

[target.'cfg(target_os = "macos")'.dependencies]
accessibility-sys = "0.2"
core-foundation = { version = "0.10", default-features = false, features = ["link"] }

[dev-dependencies]
env_logger = "0.11"

[[example]]
name = "inject_demo"
